@@ -1,0 +1,10 @@
+description	"Bridge dconf events into session upstart"
+
+emits dconf
+
+start on started dbus
+stop on stopped dbus
+
+respawn
+
+exec upstart-dconf-bridge
